# Logger

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  minilogger.pc.in
cmake/: boost-tests-helper.cmake
debug/: .gdbinit  launch.json
demo/: main.cpp
headers/: JsonUtils.h  LoggerConfig.h  mini_logger.h
sources/: JsonUtils.cpp  Logger.cpp  LoggerConfig.cpp
src/Config/: LoggerConfig.cpp  LoggerConfig.h
src/Json/: JsonUtils.cpp  JsonUtils.h
src/Logger/: Logger.cpp  Logger.h
src/TestUtils/: logger.h
tests/: General_test.cpp  Logger_test.cpp
